# rustlogic

./: Cargo.toml  README.md
src/: lib.rs  multidimensional_logicnode.rs  operators.rs  util.rs
