[package]
name = "rustlogic"
version = "0.2.1"
authors = ["Gijs Burghoorn <g.burghoorn@gmail.com>"]
edition = "2018"
description = "A Rust Library for basic parsing and handling of logical formulas"
homepage = "https://github.com/coastalwhite/rustlogic"
repository = "https://github.com/coastalwhite/rustlogic.git"
license = "MIT"
readme = "./README.md"

keywords = ["logic", "parser", "circuit", "gate", "logical"]

categories = ["parser-implementations", "science"]
